# quack-on-demand

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .scalafmt.conf  API.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  RESILIENCE.md  RUNNING.md  build.sbt  docker-compose.yml  test-api.sh  version.sbt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: cli.yml  docs.yml  n8n-node.yml  quack-node-snapshot.yml  quackwire.yml  snapshot.yml
assets/public/: README.txt  showcase.html
charts/quack-on-demand/: .helmignore  Chart.yaml  README.md  values.yaml
charts/quack-on-demand/local-stack-k8s/: README.md  grafana.yaml  ha-failover-check.md  ingress.yaml  keycloak-realm-qod.json  keycloak.yaml  kind-config.yaml  landing.yaml  local-postgres.yaml  prometheus.yaml  run-local-stack-k8s.sh  seaweedfs.yaml  stop-local-stack-k8s.sh  values-local-stack.yaml
charts/quack-on-demand/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy-manager.yaml  networkpolicy-nodes.yaml  pdb.yaml  role.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/quack-on-demand/test/: README.md  install-local.sh  local-postgres.yaml
cli/: README.md  pyproject.toml
cli/shim-qod-cli/: README.md  pyproject.toml
cli/shim-qod-cli/src/qod_cli_shim/: __init__.py
cli/src/qod_cli/: __init__.py  _manager_version.py  config.py  launcher.py  main.py  output.py  registry.py  rest.py  sql.py
cli/src/qod_cli/commands/: _launch.py  _run.py  auth.py  catalog.py  config_cmd.py  database.py  demo.py  federation.py  group.py  maintenance.py  manifest.py  membership.py  node.py  pool.py  role.py  sql_cmd.py  start.py  stop.py  tag.py  telemetry.py  tenant.py  user.py
cli/src/qod_cli/scripts/: _load-common.sh  load-ssb-dbgen.sh  load-tpcds-dbgen.sh  load-tpch-dbgen.sh
cli/tests/: _parity.py  conftest.py  test_auth.py  test_catalog_selectors.py  test_commands_table.py  test_config.py  test_demo.py  test_integration.py  test_main.py  test_manifest_io.py  test_output.py  test_parity_lib.py  test_repl.py  test_rest.py  test_rest_parity.py  test_restore.py  test_sql_render.py  test_sql_usage.py  test_start.py  test_stop.py  test_user_create_prompt.py  test_wiring.py
cli/tests/resources/: openapi.yaml
docker/quack-node/: Dockerfile  entrypoint.sh
docs/: ACL.md  API.md  AUDIT-FOLLOWUPS.md  CONFIGURATION.md  ROADMAP.md  quack-on-demand.md  security-audit-2026-07-02.md  storage-refactor.md  users.md
docs/observability/: README.md  grafana-dashboard.json
examples/java/: README.md  pom.xml
examples/n8n/: .eslintrc.js  README.md  package.json
examples/python/: README.md  client.py  query.py  requirements.txt  tpch.py  tpch_queries.py
examples/rust/: Cargo.toml  README.md
examples/rust/src/: lib.rs  tpch_queries.rs
examples/typescript/: README.md  package.json  tsconfig.json
examples/typescript/src/: client.ts  query.ts  tpch-queries.ts  tpch.ts
guides/: QUICKSTART.md  RESILIENCE.md  ROADMAP.md  RUNNING.md
libquackwire/: .gitkeep-binaries  README.md
native/quackwire/: CMakeLists.txt
native/quackwire/include/shim/: quack_server.hpp
native/quackwire/src/: quackwire.cpp  win_duckdb_compat.cpp
observability/: README.md  docker-compose.yml  grafana-dashboard.json  prometheus-compose.yml  prometheus.yml
observability/grafana-provisioning/dashboards/: qod.yaml
observability/grafana-provisioning/datasources/: prometheus.yaml
project/: Dependencies.scala  LibquackwireArtifacts.scala  QuackwireArtifact.scala  UiBuild.scala  Versions.scala  plugins.sbt
scripts/: _docker-common.sh  _load-common.ps1  _load-common.sh  adbc.sh  announce-release-discord.sh  install.sh  kill-quack-nodes.sh  load-ssb-dbgen.ps1  load-ssb-dbgen.sh  load-tpcds-dbgen.ps1  load-tpcds-dbgen.sh  load-tpch-dbgen.ps1  load-tpch-dbgen.sh  load-tpch-sf1.sh  loadtest.sh  register-tpch-federation.sh  release-docker.sh  release-jar.sh  release-lib.sh  release-libquackwire.sh  release.sh  run-docker-compose.sh  run-docker.sh  run-jar.ps1  run-jar.sh  run-wsl-jar.sh  spawn-quack-node.ps1  spawn-quack-node.sh  start-docker-compose.sh  start-docker.sh  start-quack-ducklake.sh  start-quack-on-demand.sh  stop-docker-compose.sh  stop-docker.sh  stop-jar.ps1  stop-jar.sh  stop-quack-on-demand.sh
scripts/load-22/: README.md  benchmark.py  run.sh
scripts/loadtest/: loadtest.py
scripts/tpch-load-test/: tpch-load-test.py
skills/quack-on-demand/: SKILL.md
src/main/resources/: application.conf  bootstrap-demo-minimal.yaml  bootstrap-demo.yaml  logback.xml
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  styles.css
ui/src/api/: authProviders.ts  client.ts  types.ts
ui/src/auth/: AuthContext.tsx
ui/src/components/: AclSection.tsx  AuthProviderSection.tsx  Breadcrumb.tsx  CatalogBrowser.tsx  CatalogHistoryPanel.tsx  CatalogSnapshotsPanel.tsx  CohortEditor.tsx  DataPathEditor.tsx  DatabaseSection.tsx  EffectivePermsCard.tsx  EffectivePermsModal.tsx  FederationSection.tsx  GroupSection.tsx  Icons.tsx  IdentitySection.tsx  LimitSlider.tsx  MaintenancePanel.tsx  Modal.tsx  NavDropdown.tsx  PoolDetailBody.tsx  PoolSection.tsx  RestoreDialog.tsx  RoleColumnPoliciesSection.tsx  RoleRowPoliciesSection.tsx  RoleSection.tsx  SnapshotPicker.tsx  SqlHighlight.tsx  TableSchemaCard.tsx  Tabs.tsx  UserSection.tsx
ui/src/hooks/: useTenantPoolOptions.ts
ui/src/pages/: Audit.tsx  Catalog.tsx  CatalogTableDetail.tsx  Config.tsx  CreatePool.tsx  CreateTenant.tsx  History.tsx  Login.tsx  Nodes.tsx  PoolDetail.tsx  ScalePool.tsx  TenantDetail.tsx  TenantList.tsx  Usage.tsx  Users.tsx
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: introduction.md  introduction.mdx
website/docs/administration/: access-control.md  audit-log.md  day-2-operations.md  index.md  lifecycle-config.md  manage-by-manifest.md  onboarding.md  usage-accounting.md
(+674 files in other folders)
