[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qod"
dynamic = ["version"]
description = "Launcher and CLI for Quack on Demand, the multi-tenant DuckDB/DuckLake FlightSQL gateway: try it with `uvx qod start --demo` (no install, no Postgres), run a real manager with `qod start`, administer tenants/pools/RBAC over REST, and run SQL over Arrow FlightSQL"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    # adbc-driver-flightsql and its pyarrow dependency ship no wheels for Windows
    # on ARM64 and can't build from source there, which would break `uvx qod`
    # (and `qod start --demo`) entirely. They are only needed by `qod sql`, so
    # skip them on that one platform; SqlClient.connect prints a clear hint if a
    # `qod sql` invocation lands there. Every other platform keeps the wheels.
    "adbc-driver-flightsql>=1.0; sys_platform != 'win32' or platform_machine != 'ARM64'",
    "pyarrow>=16.0; sys_platform != 'win32' or platform_machine != 'ARM64'",
    "pyreadline3>=3.4; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "pyyaml>=6.0"]

[project.scripts]
qod = "qod_cli.main:main"

[tool.hatch.version]
path = "src/qod_cli/__init__.py"

[tool.hatch.build.targets.sdist]
# Local virtualenvs (.venv-e2e etc.) contain absolute symlinks that poison the
# sdist: Python 3.14's tarfile filter refuses to extract them, killing the
# PyPI publish. Never ship scratch dirs.
exclude = [".venv*", "dist", "**/__pycache__"]

[tool.hatch.build.targets.wheel]
packages = ["src/qod_cli"]
